k8s/config/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-backup
  failurePolicy: Fail
  name: mbackup.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-globalobject
  failurePolicy: Fail
  name: mglobalobject.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - globalobjects
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-localobject
  failurePolicy: Fail
  name: mlocalobject.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - localobjects
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-operation
  failurePolicy: Fail
  name: moperation.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-recover
  failurePolicy: Fail
  name: mrecover.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - recovers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-sidecar
  failurePolicy: Fail
  name: msidecar.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - sidecars
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-k8s-v6d-io-v1alpha1-vineyardd
  failurePolicy: Fail
  name: mvineyardd.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vineyardds
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod-scheduling
  failurePolicy: Fail
  name: mpod.scheduling.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod-sidecar
  failurePolicy: Fail
  name: mpod.sidecar.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-backup
  failurePolicy: Fail
  name: vbackup.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-globalobject
  failurePolicy: Fail
  name: vglobalobject.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - globalobjects
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-localobject
  failurePolicy: Fail
  name: vlocalobject.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - localobjects
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-operation
  failurePolicy: Fail
  name: voperation.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operations
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-recover
  failurePolicy: Fail
  name: vrecover.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - recovers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-sidecar
  failurePolicy: Fail
  name: vsidecar.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - sidecars
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /validate-k8s-v6d-io-v1alpha1-vineyardd
  failurePolicy: Fail
  name: vvineyardd.kb.io
  rules:
  - apiGroups:
    - k8s.v6d.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vineyardds
  sideEffects: None
