k8s/config/webhook/namespace_selector_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod
  name: mpod.kb.io
  namespaceSelector:
    matchLabels:
      assembly-injection: enabled
