k8s/config/webhook/scheduling_selector_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod-scheduling
  name: mpod.scheduling.kb.io
  objectSelector:
    matchLabels:
      scheduling.v6d.io/enabled: "true"
