k8s/config/webhook/sidecar_selector_patch.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod-sidecar
  name: mpod.sidecar.kb.io
  namespaceSelector:
    matchLabels:
      sidecar-injection: enabled
  objectSelector:
    matchLabels:
      sidecar.v6d.io/enabled: "true"
